Issue #ED-4333 SCSS support -- All Players alignments and UI issues

--- a/src/app/client/src/app/modules/player-helper/components/player/player.component.scss
+++ b/src/app/client/src/app/modules/player-helper/components/player/player.component.scss
@@ -132,3 +132,6 @@
   overflow: hidden;
   position: relative;
 }
+.contentViewerIframeShadow.player-fullscreen .custom-web-player{
+  height: calc(100vh - 4rem);
+}
